[FEAT] 이메일 재요청 방지 - indeterminate progressbar를 사용해 사용자에게 진행 중임을 알림 - 사용자가 요청을 하지 못하게 클릭하지 못하게 설정

--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -93,4 +93,15 @@
         app:layout_constraintStart_toStartOf="@+id/edittext_email"
         app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
