[Refactor] 코드 리팩토링 - run -> apply - 버튼 비활성화

--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -159,6 +159,7 @@
         android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:text="@string/join"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/edittext_password_check"
         app:layout_constraintStart_toStartOf="@id/edittext_password_check"
