--- a/app/src/main/res/layout/activity_solution_desc.xml
+++ b/app/src/main/res/layout/activity_solution_desc.xml
@@ -8,8 +8,8 @@
 
     <ImageButton
         android:id="@+id/button_back"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:backgroundTint="@android:color/transparent"
@@ -39,6 +39,7 @@
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_subcyan"
         android:textSize="12sp"
+        android:text="@string/solution_detail"
         app:layout_constraintBottom_toBottomOf="@id/button_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginTop="14dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@id/textview_subtitle">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
